--- a/index.html
+++ b/index.html
@@ -1,12 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/main-style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Realtors</title>
   </head>
   <body>
-    <h1>REALTORS</h1>
+    <header>
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <a class="navbar-brand" href="#">Realtors</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Places to Sell</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Places to Buy</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavDropdown"
+        >
+          <div class="dropdown dropstart">
+            <button
+              type="button"
+              class="btn btn-light rounded-pill"
+              data-toggle="dropdown"
+            >
+              <i class="fas fa-bars"></i> <i class="far fa-user"></i>
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#"
+                ><i class="bi bi-list"></i>Sign Up</a
+              >
+              <a class="dropdown-item" href="#">Login</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Sell your Property</a>
+              <a class="dropdown-item" href="#">Book an Appointment</a>
+              <a class="dropdown-item" href="#">Help</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="container-fluid">
+      <div class="hekk rounded-pill">
+        <div class="dropdown dropstart">
+          <button
+            type="button"
+            class="btn btn-light rounded-pill btn-search"
+            data-toggle="dropdown"
+          >
+            <p class="fw-bold">Location</p>
+            <p>Where are you going?</p>
+          </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#"
+              ><i class="bi bi-list"></i>Sign Up</a
+            >
+          </div>
+          <span class="vertical-line"></span>
+          <button class="rounded-pill btn-search btn btn-light">
+            <p class="fw-bold">Check in</p>
+            <p>Add Dates</p>
+          </button>
+          <span class="vertical-line"></span>
+          <button class="rounded-pill btn-search btn btn-light">
+            <p class="fw-bold">Check out</p>
+            <p>Add Dates</p>
+          </button>
+          <span class="vertical-line"></span>
+          <button class="rounded-pill btn-search btn btn-light">
+            <p class="fw-bold">Guests</p>
+            <p>Add guests</p>
+          </button>
+          <button class="btn-seacrh-icon rounded-circle">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
+      </div>
+
+      <img src="./images/image1.jpg" class="img-fluid" alt="..." />
+      <h2 class="fs-3">Made possible by Hosts</h2>
+    </div>
   </body>
 </html>
