--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
       </nav>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid container_01">
       <div class="hekk rounded-pill">
         <div class="dropdown dropstart">
           <button
@@ -104,8 +104,10 @@
             class="btn btn-light rounded-pill btn-search"
             data-toggle="dropdown"
           >
-            <p class="fw-bold">Location</p>
-            <p>Where are you going?</p>
+            <div class="para">
+              <p class="fw-bold">Location</p>
+              <p>Where are you going?</p>
+            </div>
           </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#"
@@ -114,18 +116,24 @@
           </div>
           <span class="vertical-line"></span>
           <button class="rounded-pill btn-search btn btn-light">
-            <p class="fw-bold">Check in</p>
-            <p>Add Dates</p>
+            <div class="para">
+              <p class="fw-bold">Check in</p>
+              <p>Add Dates</p>
+            </div>
           </button>
           <span class="vertical-line"></span>
           <button class="rounded-pill btn-search btn btn-light">
-            <p class="fw-bold">Check out</p>
-            <p>Add Dates</p>
+            <div class="para">
+              <p class="fw-bold">Check out</p>
+              <p>Add Dates</p>
+            </div>
           </button>
           <span class="vertical-line"></span>
           <button class="rounded-pill btn-search btn btn-light">
-            <p class="fw-bold">Guests</p>
-            <p>Add guests</p>
+            <div class="para">
+              <p class="fw-bold">Guests</p>
+              <p>Add guests</p>
+            </div>
           </button>
           <button class="btn-seacrh-icon rounded-circle">
             <i class="fas fa-search"></i>
