--- a/index.html
+++ b/index.html
@@ -144,5 +144,56 @@
       <img src="./images/image1.jpg" class="img-fluid" alt="..." />
       <h2 class="fs-3">Made possible by Hosts</h2>
     </div>
+    <div class="container">
+      <h2>Explore Nearby</h2>
+      <div class="container container-1-exploreNearby">
+        <div class="row">
+          <div class="col-sm">
+            <img src="./images/lahore.jpg" alt="Lahore" />
+            <p><strong>Lahore</strong></p>
+            <p class="paraa">2.5 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/murree.jpg" alt="Lahore" />
+            <p><strong>Murree</strong></p>
+            <p class="paraa">6.5 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/Rwd.jpg" alt="Lahore" />
+            <p><strong>Rawalpindi</strong></p>
+            <p class="paraa">5.5 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/multan.jpg" alt="Lahore" />
+            <p><strong>Multan</strong></p>
+            <p class="paraa">3.5 hours drive</p>
+          </div>
+        </div>
+      </div>
+      <div class="container container-2-exploreNearby">
+        <div class="row">
+          <div class="col-sm">
+            <img src="./images/fsd.jpg" alt="Lahore" />
+            <p><strong>Faisalabad</strong></p>
+            <p class="paraa">2 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/nathia.jpg" alt="Lahore" />
+            <p><strong>Nathia Gali</strong></p>
+            <p class="paraa">6.5 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/pwr.jpg" alt="Lahore" />
+            <p><strong>Peshawar</strong></p>
+            <p class="paraa">7 hours drive</p>
+          </div>
+          <div class="col-sm">
+            <img src="./images/abt.jpg" alt="Lahore" />
+            <p><strong>Abbottabad</strong></p>
+            <p class="paraa">6.5 hours drive</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
