--- a/index.html
+++ b/index.html
@@ -149,22 +149,34 @@
       <div class="container container-1-exploreNearby">
         <div class="row">
           <div class="col-sm">
-            <img src="./images/lahore.jpg" alt="Lahore" />
+            <img
+              class="imgExploreNearby"
+              src="./images/lahore.jpg"
+              alt="Lahore"
+            />
             <p><strong>Lahore</strong></p>
             <p class="paraa">2.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/murree.jpg" alt="Lahore" />
+            <img
+              class="imgExploreNearby"
+              src="./images/murree.jpg"
+              alt="Lahore"
+            />
             <p><strong>Murree</strong></p>
             <p class="paraa">6.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/Rwd.jpg" alt="Lahore" />
+            <img class="imgExploreNearby" src="./images/Rwd.jpg" alt="Lahore" />
             <p><strong>Rawalpindi</strong></p>
             <p class="paraa">5.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/multan.jpg" alt="Lahore" />
+            <img
+              class="imgExploreNearby"
+              src="./images/multan.jpg"
+              alt="Lahore"
+            />
             <p><strong>Multan</strong></p>
             <p class="paraa">3.5 hours drive</p>
           </div>
@@ -173,24 +185,66 @@
       <div class="container container-2-exploreNearby">
         <div class="row">
           <div class="col-sm">
-            <img src="./images/fsd.jpg" alt="Lahore" />
+            <img class="imgExploreNearby" src="./images/fsd.jpg" alt="Lahore" />
             <p><strong>Faisalabad</strong></p>
             <p class="paraa">2 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/nathia.jpg" alt="Lahore" />
+            <img
+              class="imgExploreNearby"
+              src="./images/nathia.jpg"
+              alt="Lahore"
+            />
             <p><strong>Nathia Gali</strong></p>
             <p class="paraa">6.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/pwr.jpg" alt="Lahore" />
+            <img class="imgExploreNearby" src="./images/pwr.jpg" alt="Lahore" />
             <p><strong>Peshawar</strong></p>
             <p class="paraa">7 hours drive</p>
           </div>
           <div class="col-sm">
-            <img src="./images/abt.jpg" alt="Lahore" />
+            <img class="imgExploreNearby" src="./images/abt.jpg" alt="Lahore" />
             <p><strong>Abbottabad</strong></p>
             <p class="paraa">6.5 hours drive</p>
+          </div>
+        </div>
+      </div>
+
+      <h2>Live Anywhere</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img
+              class="imageLiveAnywhere"
+              src="./images/entireHomes.jpg"
+              alt="Entire Home"
+            />
+            <h3 class="myH3LiveAnywhere">Entire Homes</h3>
+          </div>
+          <div class="col-sm">
+            <img
+              class="imageLiveAnywhere"
+              src="./images/uniqueStays.jpg"
+              alt="Unique Stays"
+            />
+            <h3 class="myH3LiveAnywhere">Unique Stays</h3>
+          </div>
+          <div class="col-sm">
+            <img
+              class="imageLiveAnywhere"
+              src="./images/cabin&cottages.jpg"
+              alt="Cabin and Cottages"
+            />
+            <h3 class="myH3LiveAnywhere">Cabbin and Cottages</h3>
+          </div>
+          <div class="col-sm">
+            <img
+              class="imageLiveAnywhere"
+              src="./images/petsAllowed.jpg"
+              alt="Pets Allowed"
+            />
+            <h3 class="myH3LiveAnywhere">Pets Allowed</h3>
           </div>
         </div>
       </div>
