--- a/index.html
+++ b/index.html
@@ -149,34 +149,46 @@
       <div class="container container-1-exploreNearby">
         <div class="row">
           <div class="col-sm">
-            <img
-              class="imgExploreNearby"
-              src="./images/lahore.jpg"
-              alt="Lahore"
-            />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/lahore.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Lahore</strong></p>
             <p class="paraa">2.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img
-              class="imgExploreNearby"
-              src="./images/murree.jpg"
-              alt="Lahore"
-            />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/murree.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Murree</strong></p>
             <p class="paraa">6.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img class="imgExploreNearby" src="./images/Rwd.jpg" alt="Lahore" />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/Rwd.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Rawalpindi</strong></p>
             <p class="paraa">5.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img
-              class="imgExploreNearby"
-              src="./images/multan.jpg"
-              alt="Lahore"
-            />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/multan.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Multan</strong></p>
             <p class="paraa">3.5 hours drive</p>
           </div>
@@ -185,26 +197,47 @@
       <div class="container container-2-exploreNearby">
         <div class="row">
           <div class="col-sm">
-            <img class="imgExploreNearby" src="./images/fsd.jpg" alt="Lahore" />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/fsd.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Faisalabad</strong></p>
             <p class="paraa">2 hours drive</p>
           </div>
           <div class="col-sm">
-            <img
-              class="imgExploreNearby"
-              src="./images/nathia.jpg"
-              alt="Lahore"
-            />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/nathia.jpg"
+                alt="Lahore"
+              />
+            </a>
+
             <p><strong>Nathia Gali</strong></p>
             <p class="paraa">6.5 hours drive</p>
           </div>
           <div class="col-sm">
-            <img class="imgExploreNearby" src="./images/pwr.jpg" alt="Lahore" />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/pwr.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Peshawar</strong></p>
             <p class="paraa">7 hours drive</p>
           </div>
           <div class="col-sm">
-            <img class="imgExploreNearby" src="./images/abt.jpg" alt="Lahore" />
+            <a href="http://">
+              <img
+                class="imgExploreNearby"
+                src="./images/abt.jpg"
+                alt="Lahore"
+              />
+            </a>
             <p><strong>Abbottabad</strong></p>
             <p class="paraa">6.5 hours drive</p>
           </div>
@@ -215,38 +248,59 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img
-              class="imageLiveAnywhere"
-              src="./images/entireHomes.jpg"
-              alt="Entire Home"
-            />
+            <a href="http://">
+              <img
+                class="imageLiveAnywhere"
+                src="./images/entireHomes.jpg"
+                alt="Entire Home"
+              />
+            </a>
             <h3 class="myH3LiveAnywhere">Entire Homes</h3>
           </div>
           <div class="col-sm">
-            <img
-              class="imageLiveAnywhere"
-              src="./images/uniqueStays.jpg"
-              alt="Unique Stays"
-            />
+            <a href="http://">
+              <img
+                class="imageLiveAnywhere"
+                src="./images/uniqueStays.jpg"
+                alt="Unique Stays"
+              />
+            </a>
             <h3 class="myH3LiveAnywhere">Unique Stays</h3>
           </div>
           <div class="col-sm">
-            <img
-              class="imageLiveAnywhere"
-              src="./images/cabin&cottages.jpg"
-              alt="Cabin and Cottages"
-            />
+            <a href="http://">
+              <img
+                class="imageLiveAnywhere"
+                src="./images/cabin&cottages.jpg"
+                alt="Cabin and Cottages"
+              />
+            </a>
             <h3 class="myH3LiveAnywhere">Cabbin and Cottages</h3>
           </div>
           <div class="col-sm">
-            <img
-              class="imageLiveAnywhere"
-              src="./images/petsAllowed.jpg"
-              alt="Pets Allowed"
-            />
+            <a href="http://">
+              <img
+                class="imageLiveAnywhere"
+                src="./images/petsAllowed.jpg"
+                alt="Pets Allowed"
+              />
+            </a>
             <h3 class="myH3LiveAnywhere">Pets Allowed</h3>
           </div>
         </div>
+      </div>
+      <div class="container container-becomeHost">
+        <img src="./images/becomeHostBackground.jpg" alt="img" />
+        <h3 class="becomeHostH3">
+          Your world is <br />
+          worth sharing
+        </h3>
+        <p class="becomeHostP">
+          Turn your extra space into your next <br />opportunity.
+        </p>
+        <button type="button" class="btn btn-light myBtnImg">
+          Become a Host
+        </button>
       </div>
     </div>
   </body>
